# lighting

./: .gitignore  CMakeLists.txt
cmake/modules/: folder_structure.cmake  set_test.cmake
src/: CMakeLists.txt
src/core/: Color.h  Definitions.h  Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h  Tuple.h
src/maths/: Definitions.h  Matrix.cpp  Matrix.h  Tuple.cpp  Tuple.h
src/presentation/: Canvas.cpp  Canvas.h  CanvasExporter.h  CanvasPPMExporter.cpp  CanvasPPMExporter.h
tests/: CMakeLists.txt
tests/canvas/: CMakeLists.txt  CanvasTest.cpp
tests/matrix/: CMakeLists.txt  MatrixTest.cpp
tests/ray/: CMakeLists.txt  RayTest.cpp
tests/sphere/: CMakeLists.txt  SphereTest.cpp
tests/tuple/: CMakeLists.txt  TupleTest.cpp
